crates/flight-rules/tests/snapshots/rules_snapshots__compiled_negation.snap
---
source: crates/flight-rules/tests/rules_snapshots.rs
expression: snap
---
{
  "instructions": [
    {
      "LoadVar": 0
    },
    {
      "LoadConst": 0.0
    },
    {
      "Compare": "NotEqual"
    },
    "Not",
    {
      "JumpFalse": 6
    },
    {
      "Action": 0
    }
  ],
  "variable_map": {
    "engine_running": 0
  },
  "actions": [
    {
      "LedOff": {
        "target": "ENG"
      }
    }
  ],
  "stack_size": 8
}
