crates/flight-rules/tests/snapshots/rules_snapshots__schema_with_defaults_json.snap
---
source: crates/flight-rules/tests/rules_snapshots.rs
expression: s
---
{
  "schema": "flight.ledmap/1",
  "rules": [
    {
      "when": "speed < 100",
      "do_action": "led.panel('WARN').on()",
      "do": "led.panel('WARN').on()"
    },
    {
      "when": "altitude > 10000",
      "do_action": "led.panel('ALT').on()",
      "do": "led.panel('ALT').on()"
    }
  ],
  "defaults": {
    "hysteresis": {
      "altitude": 100.0,
      "speed": 5.0
    }
  }
}
