crates/flight-rules/tests/snapshots/rules_snapshots__validation_error_bad_schema_version.snap
---
source: crates/flight-rules/tests/rules_snapshots.rs
expression: err.to_string()
---
Validation error: Unsupported schema version: flight.ledmap/99
