crates/flight-rules/tests/snapshots/rules_snapshots__validation_error_empty_condition.snap
---
source: crates/flight-rules/tests/rules_snapshots.rs
expression: err.to_string()
---
Validation error: Rule 1: Rule condition cannot be empty
